History: Fix history page alignment issues on iOS.
BUG=269445
TEST=Open chrome://history and make sure everything is nicely aligned.

Review URL: https://chromiumcodereview.appspot.com/22371004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@216439 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: a0428a3a5d8a7da2218d5d45e37ebd4c093e3931

--- a/chrome/browser/resources/history/history.css
+++ b/chrome/browser/resources/history/history.css
@@ -352,6 +352,7 @@ html[dir='rtl'] .site-domain {
   text-align: right;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 60px;
 }
 
 html[dir='rtl'] .entry .time {
